FPVTL-2249 judge title and tests and change on header and wa order naming and addressing some lint warnings